# MindMate

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  README.md  ROADMAP.md  bumpver.toml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: langraph_runner.py  main.py  streamlit_app.py
app/core/: config.py  email_utils.py  guardrails.py  llm.py  openai_client.py  openai_utils.py  vectorstore.py
app/db/: engine.py  message_store.py  models.py  setup_db.py  user_manager.py  view_records.py
app/prompts/: prompt_texts.py
app/scripts/: index_pdfs.py  migrate_schema.py
app/tools/: journalling_prompt_generator.py
app/tools/insights/: cross_reference.py  weekly_summary.py
app/tools/journaling/: journal_analytics.py  journal_store.py  journalling_prompt_generator.py  prompt_utils.py
app/tools/selfcare/: mood_analytics.py  mood_tracker.py  rag_tool.py  reminder_cron.py  selcare_input_classifier.py  wellness_reminder.py
app/tools/therapy/: session_parser.py  therapy_insights.py  therapy_router.py  therapy_store.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/journal/: page.tsx
frontend/src/app/knowledge/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/summary/: page.tsx
frontend/src/app/therapy/: page.tsx
frontend/src/components/: markdown.tsx  mood-detail-panel.tsx  sidebar.tsx
frontend/src/components/ui/: toast.tsx
frontend/src/context/: auth.tsx
frontend/src/lib/: api.ts  utils.ts
tests/: conftest.py  sample_test_script.md  test_config.py  test_guardrails.py  test_journal_store.py  test_message_store.py  test_mood_tracker.py  test_therapy_store.py  test_user_manager.py
