[project]
name = "mindmate"
version = "2.0.0"
description = "AI-powered mental health companion with journaling, mood tracking, CBT advice, and therapy session support"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "openai",
    "groq",
    "langgraph",
    "langchain",
    "langchain-openai",
    "langchain-groq",
    "langchain-huggingface",
    "sentence-transformers",
    "langchain-community",
    "langchain-core",
    "langchain-classic",
    "langchain-text-splitters",
    "tiktoken",
    "sqlalchemy",
    "aiosqlite",
    "chromadb",
    "langchain-chroma",
    "pypdf",
    "bcrypt",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "email-validator",
    "aiosmtplib",
    "langfuse>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
per-file-ignores = {"tests/conftest.py" = ["E402"]}
